// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxField /> should handle "failed" prop 1`] = `
<ForwardRef(CheckboxField)
  failed={true}
  label="Hello!"
>
  <div
    className="root field-checkbox failed"
    data-testid="checkbox-field"
  >
    <div
      className="field-row"
    >
      <Checkbox>
        <span
          className="root"
        >
          <input
            className="input"
            data-testid="checkbox"
            type="checkbox"
          />
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              className="square"
              height="15"
              rx="1.5"
              width="15"
              x="0.5"
              y="0.5"
            />
            <path
              className="mark"
              clipRule="evenodd"
              d="M10.8 5.21967L6.4 9.18934L5.36569 8.21967C5.05327 7.92678 4.54673 7.92678 4.23431 8.21967C3.9219 8.51256 3.9219 8.98744 4.23431 9.28033L5.83431 10.7803C6.14673 11.0732 6.65327 11.0732 6.96569 10.7803L11.7657 6.28033C12.0781 5.98744 12.0781 5.51256 11.7657 5.21967C11.4533 4.92678 11.1124 4.92678 10.8 5.21967Z"
              fill="white"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </Checkbox>
    </div>
    <label>
      <span
        className="label"
        data-testid="checkbox-field:label"
      >
        Hello!
      </span>
    </label>
  </div>
</ForwardRef(CheckboxField)>
`;

exports[`<CheckboxField /> should handle "fieldView" prop 1`] = `
<ForwardRef(CheckboxField)
  checked={true}
  disabled={true}
  failed={true}
  fieldView="toggle"
  info="Test info"
  label="Test label"
  onChange={[Function]}
>
  <div
    className="root field-toggle failed disabled"
    data-testid="checkbox-field"
  >
    <div
      className="field-row"
    >
      <Toggle
        checked={true}
        disabled={true}
        onChange={[Function]}
      >
        <label
          className="root"
        >
          <input
            checked={true}
            className="input"
            data-testid="toggle"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="switch"
          />
        </label>
      </Toggle>
    </div>
    <label>
      <span
        className="label"
        data-testid="checkbox-field:label"
      >
        Test label
      </span>
      <span
        className="info"
      >
        Test info
      </span>
    </label>
  </div>
</ForwardRef(CheckboxField)>
`;

exports[`<CheckboxField /> should match snapshot 1`] = `
<ForwardRef(CheckboxField)
  checked={true}
  disabled={true}
  failed={true}
  info="Test info"
  label="Test label"
  onChange={[Function]}
>
  <div
    className="root field-checkbox failed disabled"
    data-testid="checkbox-field"
  >
    <div
      className="field-row"
    >
      <Checkbox
        checked={true}
        disabled={true}
        onChange={[Function]}
      >
        <span
          className="root"
        >
          <input
            checked={true}
            className="input"
            data-testid="checkbox"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
          />
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              className="square"
              height="15"
              rx="1.5"
              width="15"
              x="0.5"
              y="0.5"
            />
            <path
              className="mark"
              clipRule="evenodd"
              d="M10.8 5.21967L6.4 9.18934L5.36569 8.21967C5.05327 7.92678 4.54673 7.92678 4.23431 8.21967C3.9219 8.51256 3.9219 8.98744 4.23431 9.28033L5.83431 10.7803C6.14673 11.0732 6.65327 11.0732 6.96569 10.7803L11.7657 6.28033C12.0781 5.98744 12.0781 5.51256 11.7657 5.21967C11.4533 4.92678 11.1124 4.92678 10.8 5.21967Z"
              fill="white"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </Checkbox>
    </div>
    <label>
      <span
        className="label"
        data-testid="checkbox-field:label"
      >
        Test label
      </span>
      <span
        className="info"
      >
        Test info
      </span>
    </label>
  </div>
</ForwardRef(CheckboxField)>
`;
